log.out
multi_inherit.py:10: illegal call argument type expression illegal: 
multi_inherit.py:10: illegal call argument type expression illegal: 
multi_inherit.py:10: expression has no type
multi_inherit.py:10: expression has no type
multi_inherit.py:10: expression has no type
multi_inherit.py:10: expression has no type
multi_inherit.py:11: illegal call argument type expression illegal: 
multi_inherit.py:11: illegal call argument type expression illegal: 
multi_inherit.py:11: expression has no type
multi_inherit.py:11: expression has no type
multi_inherit.py:11: expression has no type
multi_inherit.py:11: expression has no type
tests/multi_inherit.py.c:48:18: error: ISO C++ does not allow indirection on operand of type '_CG_void' (aka 'void *') [-Wvoid-ptr-dereference]
   48 |   t1 = (_CG_void)_CG_prim_clone_dst(_CG_void, /* 4089 */ g2);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
././pyc_c_runtime.h:750:47: note: expanded from macro '_CG_prim_clone_dst'
  750 |   _CG_prim_primitive_clone_dst((_src), sizeof(*((_dt)0)), sizeof(*(_src)))
      |                                               ^~~~~~~~~
tests/multi_inherit.py.c:48:18: error: invalid application of 'sizeof' to an incomplete type 'void'
   48 |   t1 = (_CG_void)_CG_prim_clone_dst(_CG_void, /* 4089 */ g2);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
././pyc_c_runtime.h:750:46: note: expanded from macro '_CG_prim_clone_dst'
  750 |   _CG_prim_primitive_clone_dst((_src), sizeof(*((_dt)0)), sizeof(*(_src)))
      |                                              ^~~~~~~~~~~
tests/multi_inherit.py.c:48:18: error: ISO C++ does not allow indirection on operand of type '_CG_void' (aka 'void *') [-Wvoid-ptr-dereference]
   48 |   t1 = (_CG_void)_CG_prim_clone_dst(_CG_void, /* 4089 */ g2);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
././pyc_c_runtime.h:750:66: note: expanded from macro '_CG_prim_clone_dst'
  750 |   _CG_prim_primitive_clone_dst((_src), sizeof(*((_dt)0)), sizeof(*(_src)))
      |                                                                  ^~~~~~~
tests/multi_inherit.py.c:48:18: error: invalid application of 'sizeof' to an incomplete type 'void'
   48 |   t1 = (_CG_void)_CG_prim_clone_dst(_CG_void, /* 4089 */ g2);
      |                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
././pyc_c_runtime.h:750:65: note: expanded from macro '_CG_prim_clone_dst'
  750 |   _CG_prim_primitive_clone_dst((_src), sizeof(*((_dt)0)), sizeof(*(_src)))
      |                                                                 ^~~~~~~~~
tests/multi_inherit.py.c:57:19: error: ISO C++ does not allow indirection on operand of type '_CG_void' (aka 'void *') [-Wvoid-ptr-dereference]
   57 |   /* 4089 */ g2 = _CG_prim_new(_CG_void);
      |                   ^~~~~~~~~~~~~~~~~~~~~~
././pyc_c_runtime.h:744:48: note: expanded from macro '_CG_prim_new'
  744 | #define _CG_prim_new(_c) (_c) GC_MALLOC(sizeof(*((_c)0)))
      |                               ~~~~~~~~~~~~~~~~~^~~~~~~~~~
/opt/homebrew/include/gc/gc.h:1011:34: note: expanded from macro 'GC_MALLOC'
 1011 | # define GC_MALLOC(sz) GC_malloc(sz)
      |                                  ^~
tests/multi_inherit.py.c:57:19: error: invalid application of 'sizeof' to an incomplete type 'void'
   57 |   /* 4089 */ g2 = _CG_prim_new(_CG_void);
      |                   ^~~~~~~~~~~~~~~~~~~~~~
././pyc_c_runtime.h:744:47: note: expanded from macro '_CG_prim_new'
  744 | #define _CG_prim_new(_c) (_c) GC_MALLOC(sizeof(*((_c)0)))
      |                               ~~~~~~~~~~~~~~~~^~~~~~~~~~~
/opt/homebrew/include/gc/gc.h:1011:34: note: expanded from macro 'GC_MALLOC'
 1011 | # define GC_MALLOC(sz) GC_malloc(sz)
      |                                  ^~
6 errors generated.
make: *** [all] Error 1
fail: compilation failure
